// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sprite snapshots > draws shoes in front and profile 1`] = `
"
          ............
          .----------.
          .::::::::::.
          .----------.
          .::::::::::.
         ..::::::::::..
       ...=::::::::::=...
       ..................
       ..::::::::::::::..
        .:OOOOOOOOOOO*:.
        .:OOOOOOOOOOO*:.
        .:OOOOOOOOOOO*O.
      ...OO::OOOOO::O*O...
      .OOOO@@OOOOO@@O*OOO.
      .O*OO@:OOOOO:@O*O*O.
      .OOOOOOOOOOOOOO*OOO.
      ...OOOOOO++OOOO*O...
        .OOOOOO++OOOO*O.
        .OOO-OOOOOO-O*O.
        .OOOO------OO*O.
        ..************..
         .OOOOOOOOOOOO.
         .....****.....
      ........****........
    ...::::::@@@@@@::::::...
    .=+::::::@@--@@::::::+=.
    .=+::::::@@--@@::::::+=.
    .=+::::::@@--@@::::::+=.
    .=+::::::@@--@@::::::+=.
    .=+::::::@@--@@::::::+=.
    .=+::::::@#--@@::::::+=.
    .=+::::::@@@@@@::::::+=.
    .OO::::::@@@@@@::::::OO.
    .....==============.....
        .--------------.
        .----:....:----.
        .----:.  .:----.
        .=====.  .=====.
        .-----.  .-----.
        .:::::.  .:::::.
"
`;

exports[`sprite snapshots > draws shoes in front and profile 2`] = `
"
          ............
          .----------.
          .::::::::::.
          .----------.
          .::::::::::.
       ....::::::::::.
       .:::::::::::::....
      ...................
      .::::::::::::::....
      .::OOOOOOOOOOOO.
      .::OOOOOOOOOOOO.
      .::OOOOOOOOOOOO.
      .::OOOOOO:::OOO.
      .::OOOOOOO@@OOO..
      .::OOOOOOO@:OOOO.
      .::OOO*OOOOOOOOO.
      .::OOOOOOOOOOOO..
      ..*OOOOOOOOOOOO.
       .*OOOOOOOOOOO-.
       .*OOOOOOOOO---.
       .OOOOOOOOOO***.
       ..OOOOOOOOOOOO.
        ....*****.....
        ....*****.....
       ..======@@@===.
       .:::::::@-@:::.
       .:::::::@-@:::.
       .:::::::@-@:::.
       .:::::::@-@:::.
       .:::::::@-@:::.
       .:::::::::::::.
       .:::::::::::::.
       .:::::::::OOO:.
       ....=========..
          .=========.
          .::::-----.
          .::::-----.
          .::::-----.
          .::::-----..
          .::::------.
"
`;

exports[`sprite snapshots > draws shoes in front and profile 3`] = `
"
          ............
          .----------.
          .::::::::::.
          .----------.
          .::::::::::.
         ..::::::::::..
       ...=::::::::::=...
       ..................
       ..::::::::::::::..
        .:OOOOOOOOOOO*:.
        .:OOOOOOOOOOO*:.
        .:OOOOOOOOOOO*O.
      ...OO::OOOOO::O*O...
      .OOOO@@OOOOO@@O*OOO.
      .O*OO@:OOOOO:@O*O*O.
      .OOOOOOOOOOOOOO*OOO.
      ...OOOOOO++OOOO*O...
        .OOOOOO++OOOO*O.
        .OOO-OOOOOO-O*O.
        .OOOO------OO*O.
        ..************..
         .OOOOOOOOOOOO.
         .....****.....
      ........****........
    ...::::::@@@@@@::::::...
    .=+::::::@@--@@::::::+=.
    .=+::::::@@--@@::::::+=.
    .=+::::::@@--@@::::::+=.
    .=+::::::@@--@@::::::+=.
    .=+::::::@@--@@::::::+=.
    .=+::::::@#--@@::::::+=.
    .=+::::::@@@@@@::::::+=.
    .OO::::::@@@@@@::::::OO.
    .....::::::o:::::::.....
        .--------------.
        .----:....:----.
        .----:.  .:----.
      ...----:.  .:----...
      .o++++++.  .++++++o.
      .=======.  .=======.
"
`;

exports[`sprite snapshots > is stable for a given seed 1`] = `
"

          ............
          .++-+++++++.
        ...=@-=======...
        .@@=@========@@.
       ..@@=@========@@..
       .----------------.
       .@OOOOOOOOOOOOOO@.
       .@@############@@.
       ...@@#########O...
       ..############O#..
       .#############O##.
       .##@@@#####@@@O##.
       .##@@@#####@@@O##.
       .o##@:#####:@#O#o.
       ..############O#..
        .############O#.
        .######o#####O#.
        .###--------#O#.
        .###-@@@@@@-#O#.
        ..OOOOOOOOOOOO..
         ..##########..
          ....OOOO....
        ......OOOO......
    .....*****oooo*****.....
    .=++++++++oooo+++++=++=.
    .=++++++++oooo+++++=++=.
    .=++++++++o=oo+++++=++=.
    .=+++++++++++++++++=++=.
    .=+++++++++++++++++=++=.
    .=+++++++++=+++++++=++=.
    .=+++++++++++++++++=++=.
    .##++++++++++++++++=+##.
    .....**************.....
        .==============.
        .====-....-====.
        .=--=-.  .---==.
        .====-.  .-====.
        .#-#-#.  .#-#-#.
        .-----.  .-----.
"
`;

exports[`sprite snapshots > renders a fully decorated figure 1`] = `
"

         ..............
         .O.+O..+..O*O.
         ......==......
         .@@@@@@@@@@@@.
         .OOOOOOOOOOOO.
         .OOOOOOOOOOOO.
         .....::::.....
         .OOOOO::OOOOO.
        ..OOOOOOOOOOO*..
       ..OOOOOOOOOOOO*O..
       .OOOOOOOOOOOOO*OO.
       .OOO::OOOOO::O*OO.
       ..OO@@OOOOO@@O*O..
       .*OO@:OOOOO:@O*O*.
       ..OOOOOOOOOOOO*O..
       .:OOOOO.++.OOO*O:.
       .:OOOOO+o++OOO*O:.
       .:O::--------::O:.
       .:O::-@@@@@@-::O:.
       .:.::::.::.::::.:.
       ..O::::::::::::O..
        ......****......
      ........****........
    ...******------******...
    .=+******------******+=.
    .=+**@@@@------@@@@**+=.
    .=+******------******+=.
    .=+******------******+=.
    .=+**@@@@------@@@@**+=.
    .=+******------******+=.
    .=+******------******+=.
    .OO******------******OO.
    .....==============.....
        .--------------.
        .-----....-----.
        .-----.  .-----.
        .-----.  .-----.
       ..:-:::.  .:-:::..
       .*:::::.  .:::::*.
"
`;

exports[`sprite snapshots > renders side profiles (left mirrors right at draw time) 1`] = `
"
          ............
          .----------.
          .::::::::::.
          .----------.
          .::::::::::.
       ....::::::::::.
       .:::::::::::::....
      ...................
      .::::::::::::::....
      .::OOOOOOOOOOOO.
      .::OOOOOOOOOOOO.
      .::OOOOOOOOOOOO.
      .::OOOOOO:::OOO.
      .::OOOOOOO@@OOO..
      .::OOOOOOO@:OOOO.
      .::OOO*OOOOOOOOO.
      .::OOOOOOOOOOOO..
      ..*OOOOOOOOOOOO.
       .*OOOOOOOOOOO-.
       .*OOOOOOOOO---.
       .OOOOOOOOOO***.
       ..OOOOOOOOOOOO.
        ....*****.....
        ....*****.....
       ..======@@@===.
       .:::::::@-@:::.
       .:::::::@-@:::.
       .:::::::@-@:::.
       .:::::::@-@:::.
       .:::::::@-@:::.
       .:::::::::::::.
       .:::::::::::::.
       .:::::::::OOO:.
       ....=========..
          .=========.
          .::::-----.
          .::::-----.
          .::::-----.
          .::::-----..
          .....::::o:.
"
`;

exports[`sprite snapshots > renders the default everyman, front 1`] = `
"
          ............
          .----------.
          .::::::::::.
          .----------.
          .::::::::::.
         ..::::::::::..
       ...=::::::::::=...
       ..................
       ..::::::::::::::..
        .:OOOOOOOOOOO*:.
        .:OOOOOOOOOOO*:.
        .:OOOOOOOOOOO*O.
      ...OO::OOOOO::O*O...
      .OOOO@@OOOOO@@O*OOO.
      .O*OO@:OOOOO:@O*O*O.
      .OOOOOOOOOOOOOO*OOO.
      ...OOOOOO++OOOO*O...
        .OOOOOO++OOOO*O.
        .OOO-OOOOOO-O*O.
        .OOOO------OO*O.
        ..************..
         .OOOOOOOOOOOO.
         .....****.....
      ........****........
    ...::::::@@@@@@::::::...
    .=+::::::@@--@@::::::+=.
    .=+::::::@@--@@::::::+=.
    .=+::::::@@--@@::::::+=.
    .=+::::::@@--@@::::::+=.
    .=+::::::@@--@@::::::+=.
    .=+::::::@#--@@::::::+=.
    .=+::::::@@@@@@::::::+=.
    .OO::::::@@@@@@::::::OO.
    .....::::::o:::::::.....
        .--------------.
        .----:....:----.
        .----:.  .:----.
        .----:.  .:----.
        .:-:::.  .:-:::.
        .:::::.  .:::::.
"
`;
